Bug 1493196 - Add reporting for texture memory. r=jrmuizel